# BT-CST

./: .gitignore  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  experiments_block_tree.cpp  maximal_substrings_fully.cpp  maximal_substrings_pbt.cpp  maximal_substrings_pbtlcsa.cpp  maximal_substrings_pbtlcsadabt.cpp  maximal_substrings_pbtlcsalcsa.cpp  maximal_substrings_pbtnonedabt.cpp  maximal_substrings_pbtnonelcsa.cpp  maximal_substrings_sada.cpp  maximal_substrings_sada_rlcsa.cpp  maximal_substrings_sct3.cpp  maximal_substrings_sct3_rlcsa.cpp  test_DABT_CSA.cpp  test_fully_cst.cpp  test_lcsa_CSA.cpp  test_lcsa_c_sampling_CSA.cpp  test_lcsa_with_compressed_lengths_CSA.cpp  test_lcsa_with_lengths_CSA.cpp  test_pbtcbackrlcsacst_cst.cpp  test_pbtlcsacst_cst.cpp  test_pbtlcsadabtcst_cst.cpp  test_pbtlcsalcsacst_cst.cpp  test_pbtnobackminmaxrlcsacst_cst.cpp  test_pbtnobackrlcsacst_cst.cpp  test_pbtnonedabtcst_cst.cpp  test_pbtnonelcsacst_cst.cpp  test_pbtrlcsacst_cst.cpp  test_rlcsa_CSA.cpp  test_sada_cst.cpp  test_sada_rlcsa.cpp  test_sct3_CST.cpp  test_sct3_rlcsa_CST.cpp
includes/compressed/: BPSCBlockTree.h  BPSPCBlockTree.h  CST_SADA_RLCSA.h  CST_SCT3_RLCSA.h  DAPCBlockTree.h  PBTCISA.h  PBTCLCPA.h  PBTCSA.h  PBTCST.h  PBTCTree.h  PBTCTreecback.h  PBTCTreenoback.h  PBTCTreenobackminmax.h  PBTDABTCST.h  PBTDABTDABTCST.h  PBTDABTLCSACST.h  PBTISARLCSACST.h  PBTLCSACST.h  PBTLCSADABTCST.h  PBTLCSALCSACST.h  PBTNONEDABTCST.h  PBTNONELCSACST.h  PBTRLCSACST.h  PBTcbackRLCSACST.h  PBTnobackRLCSACST.h  PBTnobackminmaxRLCSACST.h  PCBlockTree.h
includes/lcsa/: lcsa.hpp  repair.hpp  repair_differential_array.hpp  repair_differential_array_c_sampling.hpp  repair_differential_array_with_compressed_lengths.hpp  repair_differential_array_with_lengths.hpp
src/compressed/: BPSCBlockTree.cpp  BPSPCBlockTree.cpp  CST_SADA_RLCSA.cpp  CST_SCT3_RLCSA.cpp  DAPCBlockTree.cpp  PBTCISA.cpp  PBTCLCPA.cpp  PBTCSA.cpp  PBTCST.cpp  PBTCTree.cpp  PBTCTreecback.cpp  PBTCTreenoback.cpp  PBTCTreenobackminmax.cpp  PBTDABTCST.cpp  PBTDABTDABTCST.cpp  PBTDABTLCSACST.cpp  PBTISARLCSACST.cpp  PBTLCSACST.cpp  PBTLCSADABTCST.cpp  PBTLCSALCSACST.cpp  PBTNONEDABTCST.cpp  PBTNONELCSACST.cpp  PBTRLCSACST.cpp  PBTcbackRLCSACST.cpp  PBTnobackRLCSACST.cpp  PBTnobackminmaxRLCSACST.cpp  PCBlockTree.cpp
tests/: CMakeLists.txt
tests/compressed/: BPSCBlockTreeFixture.cpp  BPSPCBlockTreeFixture.cpp  CBlockTreeFixture.cpp  CMakeLists.txt  CST_SADA_RLCSAFixture.cpp  CST_SCT3_RLCSAFixture.cpp  DAPCBlockTreeFixture.cpp  PBTCSTFixture.cpp  PBTDABTCSTFixture.cpp  PBTDABTDABTCSTFixture.cpp  PBTDABTLCSACSTFixture.cpp  PBTISARLCSACSTFixture.cpp  PBTLCSACSTFixture.cpp  PBTLCSADABTCSTFixture.cpp  PBTLCSALCSACSTFixture.cpp  PBTNONEDABTCSTFixture.cpp  PBTNONELCSACSTFixture.cpp  PBTRLCSACSTFixture.cpp  PBTcbackRLCSACSTFixture.cpp  PBTnobackRLCSACSTFixture.cpp  PBTnobackminmaxRLCSACSTFixture.cpp  PCBlockTreeFixture.cpp  repair_differential_arrayFixture.cpp
tests/padding_blocktree/: CMakeLists.txt  PBackFrontBlockTreeFixture.cpp  PBlockTreeBasicPropertiesFixture.cpp  PBlockTreeFixture.cpp  PBlockTreeWithoutCleanningFixture.cpp  PColorBlockTreeFixture.cpp  PColorPruningBlockTreeFixture.cpp  PConservativeHeuristicBlockTreeFixture.cpp  PConservativeOptimizedHeuristicBlockTreeFixture.cpp  PHeuristicBlockTreeFixture.cpp  PHeuristicConcatenateBlockTreeFixture.cpp  PLiberalHeuristicBlockTreeFixture.cpp  POtherBackFrontBlockTreeFixture.cpp  POtherConservativeHeuristicBlockTreeFixture.cpp  PRealBackFrontBlockTreeFixture.cpp  PRealColorBlockTreeFixture.cpp  PRealConservativeHeuristicBlockTreeFixture.cpp  PRealConservativeOptimizedHeuristicBlockTreeFixture.cpp  PRealOtherBackFrontBlockTreeFixture.cpp  PRealOtherConservativeHeuristicBlockTreeFixture.cpp  PReverseColorBlockTreeFixture.cpp
tests/paper_blocktree/: BackFrontBlockTreeFixture.cpp  BlockTreeBasicPropertiesFixture.cpp  BlockTreeFixture.cpp  BlockTreeWithoutCleanningFixture.cpp  CMakeLists.txt  ColorBlockTreeFixture.cpp  ColorPruningBlockTreeFixture.cpp  ConservativeHeuristicBlockTreeFixture.cpp  ConservativeOptimizedHeuristicBlockTreeFixture.cpp  HeuristicBlockTreeFixture.cpp  HeuristicConcatenateBlockTreeFixture.cpp  LiberalHeuristicBlockTreeFixture.cpp  OtherBackFrontBlockTreeFixture.cpp  OtherConservativeHeuristicBlockTreeFixture.cpp  ReverseColorBlockTreeFixture.cpp
